- fix page width on mobile

--- a/src/styles/_img-overlay.scss
+++ b/src/styles/_img-overlay.scss
@@ -6,9 +6,9 @@
 .img-overlay__img {
   position: absolute;
   top: 0;
-  right: -5vw;
+  right: 0;
   bottom: 0;
-  left: -5vw;
+  left: 0;
   overflow: hidden;
 }
 
@@ -24,8 +24,8 @@
 }
 
 .img-overlay__overlay {
-  margin: 0 -5vw;
-  padding: 15vw;
+  margin: 0;
+  padding: 10vw;
   background: rgba(0,0,0,.5);
 }
 
