--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,7 +27,7 @@ figure {
 }
 
 .divider {
-  min-width: 100%;
+  max-width: 100%;
 }
 
 // h1,h2,h3,h4,h5,h6,hgroup,
